small fixes to scrollbar on mainpage

--- a/MdExplorer/client2/src/app/md-explorer/components/main-content/main-content.component.scss
+++ b/MdExplorer/client2/src/app/md-explorer/components/main-content/main-content.component.scss
@@ -1,4 +1,6 @@
 :host {
-  height:100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  height: 100%;
   border: 1px solid black;
 }
